--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 asgiref==3.5.0
+certifi==2021.10.8
+cloudinary==1.29.0
 Django==3.2.10
+django-bootstrap3==21.2
+psycopg2==2.9.3
 pytz==2022.1
+six==1.16.0
 sqlparse==0.4.2
+urllib3==1.26.9
