--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-emoji-picker==0.0.6
 django-extensions==3.1.5
 django-heroku==0.3.1
 django-tinymce==3.4.0
+gunicorn==20.1.0
 idna==3.3
 oauthlib==3.2.0
 Pillow==9.1.0
